--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=retail
-spring.data.mongodb.uri=${mongodb+srv://adisheshar:<db_password>@cluster0.fl1tuhk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0}
+spring.data.mongodb.uri=mongodb://localhost:27017/retaildb
 spring.data.mongodb.database=retaildb
 server.port=8080
 spring.thymeleaf.cache=false
